--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </main>
     
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.mjs"></script>
 
 
 
