--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <script type="module" src="main.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/three@0.135.0/build/three.module.js"></script>
+
 
     <canvas id="bg"></canvas>   
 
